--- a/squirrel_relations_prediction/package.xml
+++ b/squirrel_relations_prediction/package.xml
@@ -11,11 +11,11 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>scipy</build_depend>
+  <build_depend>python-scipy</build_depend>
   <build_depend>std_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>scipy</run_depend>
+  <run_depend>python-scipy</run_depend>
   <run_depend>std_msgs</run_depend>
 
 </package>
