--- a/squirrel_prediction/package.xml
+++ b/squirrel_prediction/package.xml
@@ -9,6 +9,7 @@
 	<buildtool_depend>catkin</buildtool_depend>
 
 	<run_depend>squirrel_relations_prediction</run_depend>
+	<run_depend>squirrel_prediction_msgs</run_depend>
 
 	<export>
 		<metapackage/>
